; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/kern/extr_thread.c_thread_stack_enqueue.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/kern/extr_thread.c_thread_stack_enqueue.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32 }

@DBG_MACH_SCHED = common dso_local global i32 0, align 4
@MACH_STACK_WAIT = common dso_local global i32 0, align 4
@DBG_FUNC_START = common dso_local global i32 0, align 4
@thread_stack_lock = common dso_local global i32 0, align 4
@thread_stack_queue = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @thread_stack_enqueue(%struct.TYPE_5__* %0) #0 {
  %2 = alloca %struct.TYPE_5__*, align 8
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %2, align 8
  %3 = load i32, i32* @DBG_MACH_SCHED, align 4
  %4 = load i32, i32* @MACH_STACK_WAIT, align 4
  %5 = call i32 @MACHDBG_CODE(i32 %3, i32 %4)
  %6 = load i32, i32* @DBG_FUNC_START, align 4
  %7 = or i32 %5, %6
  %8 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %9 = call i32 @thread_tid(%struct.TYPE_5__* %8)
  %10 = call i32 @KERNEL_DEBUG_CONSTANT(i32 %7, i32 %9, i32 0, i32 0, i32 0, i32 0)
  %11 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %12 = call i32 @assert_thread_magic(%struct.TYPE_5__* %11)
  %13 = call i32 @simple_lock(i32* @thread_stack_lock)
  %14 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %15 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %14, i32 0, i32 0
  %16 = call i32 @enqueue_tail(i32* @thread_stack_queue, i32* %15)
  %17 = call i32 @simple_unlock(i32* @thread_stack_lock)
  %18 = call i32 @thread_wakeup(i32 ptrtoint (i32* @thread_stack_queue to i32))
  ret void
}

declare dso_local i32 @KERNEL_DEBUG_CONSTANT(i32, i32, i32, i32, i32, i32) #1

declare dso_local i32 @MACHDBG_CODE(i32, i32) #1

declare dso_local i32 @thread_tid(%struct.TYPE_5__*) #1

declare dso_local i32 @assert_thread_magic(%struct.TYPE_5__*) #1

declare dso_local i32 @simple_lock(i32*) #1

declare dso_local i32 @enqueue_tail(i32*, i32*) #1

declare dso_local i32 @simple_unlock(i32*) #1

declare dso_local i32 @thread_wakeup(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
